Stretched pic on mobile fixed

--- a/styles.css
+++ b/styles.css
@@ -526,10 +526,7 @@ a img{
     padding-top: 200px;
     font-size: 16px;
   }
-
-  .android-create-character img {
-    height: 12px;
-  }
+  
 
   .android-fab {
     display: none;
